workdir/current/compiler.output
Terminals unused in grammar

    '.'


State 140 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: TypeDefBlock ClassDefBlock GDeclBlock FDefBlock MainBlock
    2        | TypeDefBlock ClassDefBlock GDeclBlock MainBlock
    3        | TypeDefBlock ClassDefBlock MainBlock

    4 $@1: %empty

    5 $@2: %empty

    6 ClassDefBlock: CLASS $@1 ClassDefList $@2 ENDCLASS
    7              | %empty

    8 ClassDefList: ClassDefList ClassDef
    9             | ClassDef

   10 ClassDef: Cname '{' DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'

   11 Cname: ID
   12      | ID EXTENDS ID

   13 Fieldlists: Fieldlists Fld
   14           | %empty

   15 Fld: Type ID EOL

   16 MethodDecl: MethodDecl MDecl
   17           | MDecl

   18 MDecl: Type ID '(' ParamList ')' EOL

   19 MethodDefns: MethodDefns Fdef
   20            | Fdef

   21 TypeDefBlock: TYPE TypeDefList ENDTYPE
   22             | %empty

   23 TypeDefList: TypeDefList TypeDef
   24            | TypeDef

   25 $@3: %empty

   26 TypeDef: ID $@3 '{' FieldDeclList '}'

   27 FieldDeclList: FieldDeclList FieldDecl
   28              | FieldDecl

   29 FieldDecl: Type ID EOL

   30 GDeclBlock: DECL GDeclList ENDDECL
   31           | DECL ENDDECL

   32 GDeclList: GDeclList GDecl
   33          | GDecl

   34 GDecl: Type GidList EOL

   35 Type: INT
   36     | STR
   37     | ID

   38 GidList: GidList ',' Gid
   39        | Gid

   40 Gid: ID
   41    | STAR ID
   42    | ID '[' NUM ']'
   43    | ID '(' ParamList ')'

   44 FDefBlock: FDefBlock Fdef
   45          | Fdef

   46 Fdef: INT ID '(' ParamList ')' '{' LDeclBlock Coderegion '}'
   47     | STR ID '(' ParamList ')' '{' LDeclBlock Coderegion '}'
   48     | ID ID '(' ParamList ')' '{' LDeclBlock Coderegion '}'

   49 MainBlock: INT MAIN '(' ')' '{' LDeclBlock Coderegion '}'

   50 ParamList: ParamList ',' Param
   51          | Param
   52          | %empty

   53 Param: INT ID
   54      | STR ID
   55      | INT STAR ID
   56      | STR STAR ID
   57      | ID STAR ID
   58      | ID ID

   59 LDeclBlock: DECL LDeclList ENDDECL
   60           | DECL ENDDECL
   61           | %empty

   62 LDeclList: LDeclList LDecl
   63          | LDecl

   64 LDecl: Type IdList EOL

   65 IdList: IdList ',' ID
   66       | ID
   67       | IdList ',' STAR ID
   68       | STAR ID

   69 Coderegion: T_BEGIN Slist RtnStmt T_END

   70 RtnStmt: RETURN expr EOL

   71 Slist: Slist Stmt
   72      | Stmt

   73 Stmt: InputStmt
   74     | OutputStmt
   75     | AsgnStmt
   76     | IfStmt
   77     | WhileStmt
   78     | BREAK EOL
   79     | CONTINUE EOL
   80     | RptUntlStmt
   81     | DoWhileStmt
   82     | FREE '(' IDENTIFIERS ')' EOL
   83     | DELETE '(' ID ')'

   84 InputStmt: READ '(' IDENTIFIERS ')' EOL

   85 OutputStmt: WRITE '(' expr ')' EOL

   86 AsgnStmt: IDENTIFIERS ASSGN expr EOL
   87         | IDENTIFIERS ASSGN ALLOC '(' ')' EOL
   88         | IDENTIFIERS ASSGN INITIALIZE '(' ')' EOL
   89         | ID ASSGN NEW '(' ID ')' EOL
   90         | IDENTIFIERS ASSGN NEW '(' ID ')' EOL

   91 IfStmt: IF '(' expr ')' THEN Slist ELSE Slist ENDIF EOL
   92       | IF '(' expr ')' THEN Slist ENDIF EOL

   93 WhileStmt: WHILE '(' expr ')' DO Slist END_WHILE EOL

   94 RptUntlStmt: REPEAT '{' Slist '}' UNTILL '(' expr ')' EOL

   95 DoWhileStmt: DO '{' Slist '}' WHILE '(' expr ')' EOL

   96 expr: expr ADD expr
   97     | expr SUB expr
   98     | expr STAR expr
   99     | expr DIV expr
  100     | expr MOD expr
  101     | expr EQ expr
  102     | expr NE expr
  103     | expr GT expr
  104     | expr GE expr
  105     | expr LT expr
  106     | expr LE expr
  107     | expr OR expr
  108     | expr AND expr
  109     | '(' expr ')'
  110     | NUM
  111     | STR_LITERAL
  112     | IDENTIFIERS
  113     | IDENTIFIERS '(' ArgList ')'
  114     | NULL_VAL

  115 IDENTIFIERS: ID
  116            | SELF
  117            | ID '[' expr ']'

  118 ArgList: ArgList ',' expr
  119        | expr
  120        | %empty


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 18 43 46 47 48 49 82 83 84 85 87 88 89 90 91 92 93 94 95 109 113
    ')' (41) 18 43 46 47 48 49 82 83 84 85 87 88 89 90 91 92 93 94 95 109 113
    ',' (44) 38 50 65 67 118
    '.' (46)
    '[' (91) 42 117
    ']' (93) 42 117
    '{' (123) 10 26 46 47 48 49 94 95
    '}' (125) 10 26 46 47 48 49 94 95
    error (256)
    ADD (258) 96
    SUB (259) 97
    STAR (260) 41 55 56 57 67 68 98
    DIV (261) 99
    MOD (262) 100
    T_BEGIN (263) 69
    T_END (264) 69
    READ (265) 84
    WRITE (266) 85
    ASSGN (267) 86 87 88 89 90
    EOL (268) 15 18 29 34 64 70 78 79 82 84 85 86 87 88 89 90 91 92 93 94 95
    IF (269) 91 92
    THEN (270) 91 92
    ELSE (271) 91
    ENDIF (272) 91 92
    GE (273) 104
    LE (274) 106
    EQ (275) 101
    GT (276) 103
    LT (277) 105
    NE (278) 102
    WHILE (279) 93 95
    DO (280) 93 95
    END_WHILE (281) 93
    BREAK (282) 78
    CONTINUE (283) 79
    REPEAT (284) 94
    UNTILL (285) 94
    DECL (286) 10 30 31 59 60
    ENDDECL (287) 10 30 31 59 60
    INT (288) 35 46 49 53 55
    STR (289) 36 47 54 56
    MAIN (290) 49
    TYPE (291) 21
    ENDTYPE (292) 21
    ALLOC (293) 87
    INITIALIZE (294) 88
    FREE (295) 82
    NULL_VAL (296) 114
    CLASS (297) 6
    ENDCLASS (298) 6
    EXTENDS (299) 12
    NEW (300) 89 90
    DELETE (301) 83
    RETURN (302) 70
    NUM <node> (303) 42 110
    ID <node> (304) 11 12 15 18 26 29 37 40 41 42 43 46 47 48 53 54 55 56 57 58 65 66 67 68 83 89 90 115 117
    STR_LITERAL <node> (305) 111
    SELF <node> (306) 116
    OR (307) 107
    AND (308) 108


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    program (63)
        on left: 1 2 3
        on right: 0
    ClassDefBlock (64)
        on left: 6 7
        on right: 1 2 3
    $@1 (65)
        on left: 4
        on right: 6
    $@2 (66)
        on left: 5
        on right: 6
    ClassDefList (67)
        on left: 8 9
        on right: 6 8
    ClassDef (68)
        on left: 10
        on right: 8 9
    Cname (69)
        on left: 11 12
        on right: 10
    Fieldlists (70)
        on left: 13 14
        on right: 10 13
    Fld (71)
        on left: 15
        on right: 13
    MethodDecl (72)
        on left: 16 17
        on right: 10 16
    MDecl (73)
        on left: 18
        on right: 16 17
    MethodDefns (74)
        on left: 19 20
        on right: 10 19
    TypeDefBlock (75)
        on left: 21 22
        on right: 1 2 3
    TypeDefList (76)
        on left: 23 24
        on right: 21 23
    TypeDef (77)
        on left: 26
        on right: 23 24
    $@3 (78)
        on left: 25
        on right: 26
    FieldDeclList <fieldlist> (79)
        on left: 27 28
        on right: 26 27
    FieldDecl <fieldlist> (80)
        on left: 29
        on right: 27 28
    GDeclBlock (81)
        on left: 30 31
        on right: 1 2
    GDeclList (82)
        on left: 32 33
        on right: 30 32
    GDecl (83)
        on left: 34
        on right: 32 33
    Type (84)
        on left: 35 36 37
        on right: 15 18 29 34 64
    GidList (85)
        on left: 38 39
        on right: 34 38
    Gid (86)
        on left: 40 41 42 43
        on right: 38 39
    FDefBlock (87)
        on left: 44 45
        on right: 1 44
    Fdef <node> (88)
        on left: 46 47 48
        on right: 19 20 44 45
    MainBlock (89)
        on left: 49
        on right: 1 2 3
    ParamList <parameter> (90)
        on left: 50 51 52
        on right: 18 43 46 47 48 50
    Param <parameter> (91)
        on left: 53 54 55 56 57 58
        on right: 50 51
    LDeclBlock (92)
        on left: 59 60 61
        on right: 46 47 48 49
    LDeclList (93)
        on left: 62 63
        on right: 59 62
    LDecl (94)
        on left: 64
        on right: 62 63
    IdList <localSymbolTable> (95)
        on left: 65 66 67 68
        on right: 64 65 67
    Coderegion <node> (96)
        on left: 69
        on right: 46 47 48 49
    RtnStmt <node> (97)
        on left: 70
        on right: 69
    Slist <node> (98)
        on left: 71 72
        on right: 69 71 91 92 93 94 95
    Stmt <node> (99)
        on left: 73 74 75 76 77 78 79 80 81 82 83
        on right: 71 72
    InputStmt <node> (100)
        on left: 84
        on right: 73
    OutputStmt <node> (101)
        on left: 85
        on right: 74
    AsgnStmt <node> (102)
        on left: 86 87 88 89 90
        on right: 75
    IfStmt <node> (103)
        on left: 91 92
        on right: 76
    WhileStmt <node> (104)
        on left: 93
        on right: 77
    RptUntlStmt <node> (105)
        on left: 94
        on right: 80
    DoWhileStmt <node> (106)
        on left: 95
        on right: 81
    expr <node> (107)
        on left: 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
        on right: 70 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 117 118 119
    IDENTIFIERS <node> (108)
        on left: 115 116 117
        on right: 82 84 86 87 88 90 112 113
    ArgList <node> (109)
        on left: 118 119 120
        on right: 113 118


State 0

    0 $accept: . program $end

    TYPE  shift, and go to state 1

    $default  reduce using rule 22 (TypeDefBlock)

    program       go to state 2
    TypeDefBlock  go to state 3


State 1

   21 TypeDefBlock: TYPE . TypeDefList ENDTYPE

    ID  shift, and go to state 4

    TypeDefList  go to state 5
    TypeDef      go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: TypeDefBlock . ClassDefBlock GDeclBlock FDefBlock MainBlock
    2        | TypeDefBlock . ClassDefBlock GDeclBlock MainBlock
    3        | TypeDefBlock . ClassDefBlock MainBlock

    CLASS  shift, and go to state 8

    $default  reduce using rule 7 (ClassDefBlock)

    ClassDefBlock  go to state 9


State 4

   26 TypeDef: ID . $@3 '{' FieldDeclList '}'

    $default  reduce using rule 25 ($@3)

    $@3  go to state 10


State 5

   21 TypeDefBlock: TYPE TypeDefList . ENDTYPE
   23 TypeDefList: TypeDefList . TypeDef

    ENDTYPE  shift, and go to state 11
    ID       shift, and go to state 4

    TypeDef  go to state 12


State 6

   24 TypeDefList: TypeDef .

    $default  reduce using rule 24 (TypeDefList)


State 7

    0 $accept: program $end .

    $default  accept


State 8

    6 ClassDefBlock: CLASS . $@1 ClassDefList $@2 ENDCLASS

    $default  reduce using rule 4 ($@1)

    $@1  go to state 13


State 9

    1 program: TypeDefBlock ClassDefBlock . GDeclBlock FDefBlock MainBlock
    2        | TypeDefBlock ClassDefBlock . GDeclBlock MainBlock
    3        | TypeDefBlock ClassDefBlock . MainBlock

    DECL  shift, and go to state 14
    INT   shift, and go to state 15

    GDeclBlock  go to state 16
    MainBlock   go to state 17


State 10

   26 TypeDef: ID $@3 . '{' FieldDeclList '}'

    '{'  shift, and go to state 18


State 11

   21 TypeDefBlock: TYPE TypeDefList ENDTYPE .

    $default  reduce using rule 21 (TypeDefBlock)


State 12

   23 TypeDefList: TypeDefList TypeDef .

    $default  reduce using rule 23 (TypeDefList)


State 13

    6 ClassDefBlock: CLASS $@1 . ClassDefList $@2 ENDCLASS

    ID  shift, and go to state 19

    ClassDefList  go to state 20
    ClassDef      go to state 21
    Cname         go to state 22


State 14

   30 GDeclBlock: DECL . GDeclList ENDDECL
   31           | DECL . ENDDECL

    ENDDECL  shift, and go to state 23
    INT      shift, and go to state 24
    STR      shift, and go to state 25
    ID       shift, and go to state 26

    GDeclList  go to state 27
    GDecl      go to state 28
    Type       go to state 29


State 15

   49 MainBlock: INT . MAIN '(' ')' '{' LDeclBlock Coderegion '}'

    MAIN  shift, and go to state 30


State 16

    1 program: TypeDefBlock ClassDefBlock GDeclBlock . FDefBlock MainBlock
    2        | TypeDefBlock ClassDefBlock GDeclBlock . MainBlock

    INT  shift, and go to state 31
    STR  shift, and go to state 32
    ID   shift, and go to state 33

    FDefBlock  go to state 34
    Fdef       go to state 35
    MainBlock  go to state 36


State 17

    3 program: TypeDefBlock ClassDefBlock MainBlock .

    $default  reduce using rule 3 (program)


State 18

   26 TypeDef: ID $@3 '{' . FieldDeclList '}'

    INT  shift, and go to state 24
    STR  shift, and go to state 25
    ID   shift, and go to state 26

    FieldDeclList  go to state 37
    FieldDecl      go to state 38
    Type           go to state 39


State 19

   11 Cname: ID .
   12      | ID . EXTENDS ID

    EXTENDS  shift, and go to state 40

    $default  reduce using rule 11 (Cname)


State 20

    6 ClassDefBlock: CLASS $@1 ClassDefList . $@2 ENDCLASS
    8 ClassDefList: ClassDefList . ClassDef

    ID  shift, and go to state 19

    $default  reduce using rule 5 ($@2)

    $@2       go to state 41
    ClassDef  go to state 42
    Cname     go to state 22


State 21

    9 ClassDefList: ClassDef .

    $default  reduce using rule 9 (ClassDefList)


State 22

   10 ClassDef: Cname . '{' DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'

    '{'  shift, and go to state 43


State 23

   31 GDeclBlock: DECL ENDDECL .

    $default  reduce using rule 31 (GDeclBlock)


State 24

   35 Type: INT .

    $default  reduce using rule 35 (Type)


State 25

   36 Type: STR .

    $default  reduce using rule 36 (Type)


State 26

   37 Type: ID .

    $default  reduce using rule 37 (Type)


State 27

   30 GDeclBlock: DECL GDeclList . ENDDECL
   32 GDeclList: GDeclList . GDecl

    ENDDECL  shift, and go to state 44
    INT      shift, and go to state 24
    STR      shift, and go to state 25
    ID       shift, and go to state 26

    GDecl  go to state 45
    Type   go to state 29


State 28

   33 GDeclList: GDecl .

    $default  reduce using rule 33 (GDeclList)


State 29

   34 GDecl: Type . GidList EOL

    STAR  shift, and go to state 46
    ID    shift, and go to state 47

    GidList  go to state 48
    Gid      go to state 49


State 30

   49 MainBlock: INT MAIN . '(' ')' '{' LDeclBlock Coderegion '}'

    '('  shift, and go to state 50


State 31

   46 Fdef: INT . ID '(' ParamList ')' '{' LDeclBlock Coderegion '}'
   49 MainBlock: INT . MAIN '(' ')' '{' LDeclBlock Coderegion '}'

    MAIN  shift, and go to state 30
    ID    shift, and go to state 51


State 32

   47 Fdef: STR . ID '(' ParamList ')' '{' LDeclBlock Coderegion '}'

    ID  shift, and go to state 52


State 33

   48 Fdef: ID . ID '(' ParamList ')' '{' LDeclBlock Coderegion '}'

    ID  shift, and go to state 53


State 34

    1 program: TypeDefBlock ClassDefBlock GDeclBlock FDefBlock . MainBlock
   44 FDefBlock: FDefBlock . Fdef

    INT  shift, and go to state 31
    STR  shift, and go to state 32
    ID   shift, and go to state 33

    Fdef       go to state 54
    MainBlock  go to state 55


State 35

   45 FDefBlock: Fdef .

    $default  reduce using rule 45 (FDefBlock)


State 36

    2 program: TypeDefBlock ClassDefBlock GDeclBlock MainBlock .

    $default  reduce using rule 2 (program)


State 37

   26 TypeDef: ID $@3 '{' FieldDeclList . '}'
   27 FieldDeclList: FieldDeclList . FieldDecl

    INT  shift, and go to state 24
    STR  shift, and go to state 25
    ID   shift, and go to state 26
    '}'  shift, and go to state 56

    FieldDecl  go to state 57
    Type       go to state 39


State 38

   28 FieldDeclList: FieldDecl .

    $default  reduce using rule 28 (FieldDeclList)


State 39

   29 FieldDecl: Type . ID EOL

    ID  shift, and go to state 58


State 40

   12 Cname: ID EXTENDS . ID

    ID  shift, and go to state 59


State 41

    6 ClassDefBlock: CLASS $@1 ClassDefList $@2 . ENDCLASS

    ENDCLASS  shift, and go to state 60


State 42

    8 ClassDefList: ClassDefList ClassDef .

    $default  reduce using rule 8 (ClassDefList)


State 43

   10 ClassDef: Cname '{' . DECL Fieldlists MethodDecl ENDDECL MethodDefns '}'

    DECL  shift, and go to state 61


State 44

   30 GDeclBlock: DECL GDeclList ENDDECL .

    $default  reduce using rule 30 (GDeclBlock)


State 45

   32 GDeclList: GDeclList GDecl .

    $default  reduce using rule 32 (GDeclList)


State 46

   41 Gid: STAR . ID

    ID  shift, and go to state 62


State 47

   40 Gid: ID .
   42    | ID . '[' NUM ']'
   43    | ID . '(' ParamList ')'

    '('  shift, and go to state 63
    '['  shift, and go to state 64

    $default  reduce using rule 40 (Gid)


State 48

   34 GDecl: Type GidList . EOL
   38 GidList: GidList . ',' Gid

    EOL  shift, and go to state 65
    ','  shift, and go to state 66


State 49

   39 GidList: Gid .

    $default  reduce using rule 39 (GidList)


State 50

   49 MainBlock: INT MAIN '(' . ')' '{' LDeclBlock Coderegion '}'

    ')'  shift, and go to state 67


State 51

   46 Fdef: INT ID . '(' ParamList ')' '{' LDeclBlock Coderegion '}'

    '('  shift, and go to state 68


State 52

   47 Fdef: STR ID . '(' ParamList ')' '{' LDeclBlock Coderegion '}'

    '('  shift, and go to state 69


State 53

   48 Fdef: ID ID . '(' ParamList ')' '{' LDeclBlock Coderegion '}'

    '('  shift, and go to state 70


State 54

   44 FDefBlock: FDefBlock Fdef .

    $default  reduce using rule 44 (FDefBlock)


State 55

    1 program: TypeDefBlock ClassDefBlock GDeclBlock FDefBlock MainBlock .

    $default  reduce using rule 1 (program)


State 56

   26 TypeDef: ID $@3 '{' FieldDeclList '}' .

    $default  reduce using rule 26 (TypeDef)


State 57

   27 FieldDeclList: FieldDeclList FieldDecl .

    $default  reduce using rule 27 (FieldDeclList)


State 58

   29 FieldDecl: Type ID . EOL

    EOL  shift, and go to state 71


State 59

   12 Cname: ID EXTENDS ID .

    $default  reduce using rule 12 (Cname)


State 60

    6 ClassDefBlock: CLASS $@1 ClassDefList $@2 ENDCLASS .

    $default  reduce using rule 6 (ClassDefBlock)


State 61

   10 ClassDef: Cname '{' DECL . Fieldlists MethodDecl ENDDECL MethodDefns '}'

    $default  reduce using rule 14 (Fieldlists)

    Fieldlists  go to state 72


State 62

   41 Gid: STAR ID .

    $default  reduce using rule 41 (Gid)


State 63

   43 Gid: ID '(' . ParamList ')'

    INT  shift, and go to state 73
    STR  shift, and go to state 74
    ID   shift, and go to state 75

    $default  reduce using rule 52 (ParamList)

    ParamList  go to state 76
    Param      go to state 77


State 64

   42 Gid: ID '[' . NUM ']'

    NUM  shift, and go to state 78


State 65

   34 GDecl: Type GidList EOL .

    $default  reduce using rule 34 (GDecl)


State 66

   38 GidList: GidList ',' . Gid

    STAR  shift, and go to state 46
    ID    shift, and go to state 47

    Gid  go to state 79


State 67

   49 MainBlock: INT MAIN '(' ')' . '{' LDeclBlock Coderegion '}'

    '{'  shift, and go to state 80


State 68

   46 Fdef: INT ID '(' . ParamList ')' '{' LDeclBlock Coderegion '}'

    INT  shift, and go to state 73
    STR  shift, and go to state 74
    ID   shift, and go to state 75

    $default  reduce using rule 52 (ParamList)
